--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
-on:push
+on: push
 jobs:
  build:
-   runs_on: ubuntu-latest
+   runs-on: ubuntu-latest
    steps:
      - name: checkout
        uses: actions/checkout@v4
